tests/snapshots/examples_fixtures/generics__working__accepts__infer_higher_order_apply.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/generics/working/accepts/infer_higher_order_apply.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
