tests/snapshots/examples_fixtures/generics__working__accepts__infer_identity_two_types.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/generics/working/accepts/infer_identity_two_types.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
