tests/snapshots/examples_fixtures/generics__working__accepts__infer_let_lambda_polymorphic.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/generics/working/accepts/infer_let_lambda_polymorphic.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
