tests/snapshots/examples_fixtures/generics__working__accepts__project_field_from_match_arm.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/generics/working/accepts/project_field_from_match_arm.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
