tests/snapshots/examples_fixtures/generics__working__accepts__project_tuple_known_shape.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/generics/working/accepts/project_tuple_known_shape.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
