tests/snapshots/examples_fixtures/generics__working__accepts__recursion_mutual_generic.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/generics/working/accepts/recursion_mutual_generic.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
